Fix alignment of remove future button

--- a/src/components/time-slider/time-slider.css
+++ b/src/components/time-slider/time-slider.css
@@ -10,7 +10,6 @@
 
 .remove-future-button {
     max-height: 1rem;
-    margin-bottom: 0.25rem;
     margin-left: 0.15rem;
     opacity: 0.5;
 }
